--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,17 +14,21 @@
         android:theme="@style/Theme.Lap1"
         tools:targetApi="31">
         <activity
+            android:name=".MyRecyclerViewDemo"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".Home_with_navigation"
-            android:exported="false"
-
-            />
+            android:exported="false" />
         <activity
             android:name=".Home"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
